--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/theArcticGiant/comp2406-2020.1#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "nunjucks": "^3.2.0"
   }
 }
